✨ Change GetSubjectData endpoint (#48)
